language/move-lang/tests/move_check/translated_ir_tests/move/signer/move_to_non_resource.exp
error: 

   ┌── tests/move_check/translated_ir_tests/move/signer/move_to_non_resource.move:4:9 ───
   │
 4 │         move_to(s, R { f: false })
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'
   ·
 4 │         move_to(s, R { f: false })
   │                    -------------- The type '0x8675309::M::R' does not have the ability 'key'
   ·
 2 │     struct R { f: bool }
   │            - To satisify the constraint, the 'key' ability would need to be added here
   │

error: 

    ┌── tests/move_check/translated_ir_tests/move/signer/move_to_non_resource.move:14:14 ───
    │
 14 │         () = move_to(s, R { f: false })
    │              ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'
    ·
 14 │         () = move_to(s, R { f: false })
    │                         -------------- The type '0x8675309::N::R<bool>' does not have the ability 'key'
    ·
 12 │     struct R<T> { f: T }
    │            - To satisify the constraint, the 'key' ability would need to be added here
    │

